feat: waveforms and injection ui

--- a/UnityApp/Assets/UI/RunMode/RunMode.uxml
+++ b/UnityApp/Assets/UI/RunMode/RunMode.uxml
@@ -3,7 +3,6 @@
         <!-- Top HUD -->
         <ui:VisualElement style="flex-direction: row; height: 50px; background-color: rgb(40, 40, 40); align-items: center; padding-left: 10px;">
             <ui:Label text="RUN MODE" style="color: white; font-weight: bold; font-size: 18px; margin-right: 20px;" />
-            
             <ui:Label name="TimeLabel" text="Time: 0.00s" style="color: yellow; margin-right: 15px;" />
             <ui:Label name="TickLabel" text="Tick: 0" style="color: grey; margin-right: 15px;" />
             <ui:Button name="StopButton" text="Stop Simulation" style="background-color: rgb(180, 50, 50); color: white; width: 120px;" />
@@ -12,21 +11,53 @@
         <!-- Main Area -->
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             
-            <!-- Injection Panel (Stub) -->
-            <ui:VisualElement style="width: 250px; background-color: rgb(30, 30, 30); padding: 10px; border-right-width: 1px;">
-                <ui:Label text="Inputs (Stub)" style="color: white; font-weight: bold; margin-bottom: 10px;" />
-                <ui:TextField name="SignalNameField" label="Signal" value="input_1" />
-                <ui:FloatField name="SignalValueField" label="Value" value="1.0" />
-                <ui:Toggle name="InjectionActiveToggle" label="Active" value="false" />
+            <!-- Left: Injection Panel -->
+            <ui:VisualElement style="width: 300px; background-color: rgb(30, 30, 30); padding: 10px; border-right-width: 1px; border-color: grey;">
+                <ui:Label text="Signal Injection" style="color: white; font-weight: bold; margin-bottom: 10px; font-size: 14px;" />
+                
+                <!-- Creator -->
+                <ui:VisualElement style="background-color: rgb(40, 40, 40); padding: 5px; margin-bottom: 10px; border-radius: 4px;">
+                    <ui:Label text="Add Signal" style="color: grey; margin-bottom: 5px;" />
+                    <ui:TextField name="NewSignalName" label="Name" value="input_1" />
+                    <ui:DropdownField name="WaveformTypeDropdown" label="Type" choices="Constant,Step,Ramp,Sine" index="0" />
+                    
+                    <!-- Params Container (Generic for MVP) -->
+                    <ui:VisualElement name="ParamsContainer" style="margin-top: 5px;">
+                        <ui:FloatField name="Param1" label="Value/Amp" value="1.0" />
+                        <ui:FloatField name="Param2" label="Freq/EndVal" value="0.0" />
+                        <ui:FloatField name="Param3" label="Offset" value="0.0" />
+                    </ui:VisualElement>
+
+                    <ui:Button name="AddSignalBtn" text="+ Add Signal" style="margin-top: 5px; background-color: rgb(60, 60, 100);" />
+                </ui:VisualElement>
+
+                <!-- List -->
+                <ui:Label text="Active Signals" style="color: white; margin-bottom: 5px;" />
+                <ui:ScrollView name="SignalList" style="flex-grow: 1; background-color: rgb(25, 25, 25);" />
+                
+                <ui:Toggle name="InjectionActiveToggle" label="Master Injection Enable" value="true" style="margin-top: 10px; color: white;" />
             </ui:VisualElement>
 
-            <!-- Logs Panel -->
-            <ui:VisualElement style="flex-grow: 1; padding: 10px;">
-                <ui:Label text="Event Log" style="color: white; margin-bottom: 5px;" />
-                <ui:ScrollView name="LogScroll" style="flex-grow: 1; background-color: black; border-width: 1px; border-color: grey;">
-                    <ui:Label name="LogContentLabel" text="" style="color: white; padding: 5px;" />
-                </ui:ScrollView>
-                <ui:Label name="TelemetryPathLabel" text="Log Path: ..." style="color: grey; font-size: 10px; margin-top: 5px;" />
+            <!-- Center/Right: Logs & Serial -->
+            <ui:VisualElement style="flex-grow: 1; flex-direction: column;">
+                
+                <!-- Event Log -->
+                <ui:VisualElement style="flex-grow: 1; padding: 10px; border-bottom-width: 1px; border-color: grey;">
+                     <ui:Label text="Event Log" style="color: white; margin-bottom: 5px;" />
+                     <ui:ScrollView name="LogScroll" style="flex-grow: 1; background-color: black;">
+                        <ui:Label name="LogContentLabel" text="" style="color: white; padding: 5px;" />
+                     </ui:ScrollView>
+                </ui:VisualElement>
+
+                <!-- Serial Stub -->
+                <ui:VisualElement style="height: 150px; padding: 10px; background-color: rgb(25, 25, 25);">
+                    <ui:Label text="Serial Console (Stub)" style="color: green; font-family: monospace; margin-bottom: 5px;" />
+                     <ui:ScrollView name="SerialScroll" style="flex-grow: 1; background-color: black;">
+                        <ui:Label name="SerialContentLabel" text="Serial port initialized..." style="color: green; padding: 5px; font-family: monospace;" />
+                     </ui:ScrollView>
+                </ui:VisualElement>
+                
+                <ui:Label name="TelemetryPathLabel" text="Log Path: ..." style="color: grey; font-size: 10px; padding: 5px;" />
             </ui:VisualElement>
         
         </ui:VisualElement>
