--- a/UnityApp/Assets/UI/CircuitStudio/CircuitStudio.uxml
+++ b/UnityApp/Assets/UI/CircuitStudio/CircuitStudio.uxml
@@ -27,10 +27,10 @@
 
         <!-- Right Inspector / Actions -->
         <ui:VisualElement style="flex-direction: row; height: 50px; background-color: rgb(40, 40, 40); align-items: center; padding-left: 10px;">
-            <ui:Button name="BackBtn" text="< Back" style="width: 60px; margin-right: 10px;" />
+            <ui:Button name="BackBtn" text="&lt; Back" style="width: 60px; margin-right: 10px;" />
             <ui:Label text="CIRCUIT STUDIO" style="color: white; font-weight: bold; font-size: 18px;" />
             <ui:VisualElement style="flex-grow: 1;" />
-            <ui:Label name="StatusLabel" text="Ready" style="color: grey; margin-right: 10px;" />
+            <ui:Label name="StatusBarLabel" text="Ready" style="color: grey; margin-right: 10px;" />
             <ui:Button name="RunBtn" text="RUN >" style="background-color: rgb(50, 180, 50); color: white; width: 80px; margin-right: 10px;" />
         </ui:VisualElement>
     </ui:VisualElement>
