--- a/UnityApp/Assets/UI/RunMode/RunMode.uxml
+++ b/UnityApp/Assets/UI/RunMode/RunMode.uxml
@@ -4,7 +4,7 @@
         <ui:VisualElement style="flex-direction: row; height: 50px; background-color: rgb(40, 40, 40); align-items: center; padding-left: 10px;">
             <ui:Label text="RUN MODE" style="color: white; font-weight: bold; font-size: 18px; margin-right: 20px;" />
             <ui:Label name="TimeLabel" text="Time: 0.00s" style="color: yellow; margin-right: 15px;" />
-            <ui:Label name="TickLabel" text="Tick: 0" style="color: grey; margin-right: 15px;" />
+            <ui:Label name="TickLabel" text="Tick: 0" style="color: white; margin-right: 15px;" />
             <ui:Button name="StopButton" text="Stop Simulation" style="background-color: rgb(180, 50, 50); color: white; width: 120px;" />
         </ui:VisualElement>
 
@@ -12,23 +12,23 @@
         <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
             
             <!-- Left: Injection Panel -->
-            <ui:VisualElement style="width: 300px; background-color: rgb(30, 30, 30); padding: 10px; border-right-width: 1px; border-color: grey;">
+            <ui:VisualElement style="width: 25%; min-width: 250px; background-color: rgb(30, 30, 30); padding: 10px; border-right-width: 1px; border-color: white;">
                 <ui:Label text="Signal Injection" style="color: white; font-weight: bold; margin-bottom: 10px; font-size: 14px;" />
                 
                 <!-- Creator -->
                 <ui:VisualElement style="background-color: rgb(40, 40, 40); padding: 5px; margin-bottom: 10px; border-radius: 4px;">
-                    <ui:Label text="Add Signal" style="color: grey; margin-bottom: 5px;" />
-                    <ui:TextField name="NewSignalName" label="Name" value="input_1" />
-                    <ui:DropdownField name="WaveformTypeDropdown" label="Type" choices="Constant,Step,Ramp,Sine" index="0" />
+                    <ui:Label text="Add Signal" style="color: white; margin-bottom: 5px;" />
+                    <ui:TextField name="NewSignalName" label="Name" value="input_1" style="color: white;" />
+                    <ui:DropdownField name="WaveformTypeDropdown" label="Type" choices="Constant,Step,Ramp,Sine" index="0" style="color: white;" />
                     
                     <!-- Params Container (Generic for MVP) -->
                     <ui:VisualElement name="ParamsContainer" style="margin-top: 5px;">
-                        <ui:FloatField name="Param1" label="Value/Amp" value="1.0" />
-                        <ui:FloatField name="Param2" label="Freq/EndVal" value="0.0" />
-                        <ui:FloatField name="Param3" label="Offset" value="0.0" />
+                        <ui:FloatField name="Param1" label="Value/Amp" value="1.0" style="color: white;" />
+                        <ui:FloatField name="Param2" label="Freq/EndVal" value="0.0" style="color: white;" />
+                        <ui:FloatField name="Param3" label="Offset" value="0.0" style="color: white;" />
                     </ui:VisualElement>
 
-                    <ui:Button name="AddSignalBtn" text="+ Add Signal" style="margin-top: 5px; background-color: rgb(60, 60, 100);" />
+                    <ui:Button name="AddSignalBtn" text="+ Add Signal" style="margin-top: 5px; background-color: rgb(60, 60, 100); color: white;" />
                 </ui:VisualElement>
 
                 <!-- List -->
@@ -39,10 +39,10 @@
             </ui:VisualElement>
 
             <!-- Center/Right: Logs & Serial -->
-            <ui:VisualElement style="flex-grow: 1; flex-direction: column;">
+            <ui:VisualElement style="flex-grow: 1; flex-direction: column; width: 75%;">
                 
                 <!-- Event Log -->
-                <ui:VisualElement style="flex-grow: 1; padding: 10px; border-bottom-width: 1px; border-color: grey;">
+                <ui:VisualElement style="flex-grow: 1; padding: 10px; border-bottom-width: 1px; border-color: white;">
                      <ui:Label text="Event Log" style="color: white; margin-bottom: 5px;" />
                      <ui:ScrollView name="LogScroll" style="flex-grow: 1; background-color: black;">
                         <ui:Label name="LogContentLabel" text="" style="color: white; padding: 5px;" />
@@ -50,14 +50,14 @@
                 </ui:VisualElement>
 
                 <!-- Serial Stub -->
-                <ui:VisualElement style="height: 150px; padding: 10px; background-color: rgb(25, 25, 25);">
-                    <ui:Label text="Serial Console (Stub)" style="color: green; font-family: monospace; margin-bottom: 5px;" />
+                <ui:VisualElement style="height: 30%; min-height: 150px; padding: 10px; background-color: rgb(25, 25, 25);">
+                    <ui:Label text="Serial Console (Stub)" style="color: #4CAF50; font-family: monospace; margin-bottom: 5px;" />
                      <ui:ScrollView name="SerialScroll" style="flex-grow: 1; background-color: black;">
-                        <ui:Label name="SerialContentLabel" text="Serial port initialized..." style="color: green; padding: 5px; font-family: monospace;" />
+                        <ui:Label name="SerialContentLabel" text="Serial port initialized..." style="color: #4CAF50; padding: 5px; font-family: monospace;" />
                      </ui:ScrollView>
                 </ui:VisualElement>
                 
-                <ui:Label name="TelemetryPathLabel" text="Log Path: ..." style="color: grey; font-size: 10px; padding: 5px;" />
+                <ui:Label name="TelemetryPathLabel" text="Log Path: ..." style="color: white; font-size: 10px; padding: 5px;" />
             </ui:VisualElement>
         
         </ui:VisualElement>
