--- a/UnityApp/Assets/UI/Theme/RobotwinTheme.uss
+++ b/UnityApp/Assets/UI/Theme/RobotwinTheme.uss
@@ -69,6 +69,19 @@
     border-color: var(--unity-border);
 }
 
+.border-t {
+    border-top-width: 1px;
+    border-color: var(--unity-border);
+}
+
+.text-high {
+    color: var(--unity-text-high);
+}
+
+.text-dim {
+    color: var(--unity-text-dim);
+}
+
 .border-b {
     border-bottom-width: 1px;
     border-color: var(--unity-border);
